[tool.poetry]
name = "arcaflow-plugin-uperf"
version = "0.1.0"
description = ""
authors = ["Jared O'Connell"]
license = "Apache-2.0+GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
autoflake = "^1.7.5"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
