[tool.poetry]
name = "arcaflow-plugin-uperf"
version = "0.1.0"
description = ""
authors = ["Jared O'Connell"]
license = "Apache-2.0+GPL-2.0-only"

packages = [{include = "uperf_plugin.py", from="./arcaflow_plugin_uperf"}]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.10.3"


[tool.poetry.dev-dependencies]
black = "^23.0.0"
autoflake = "^2.0.0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
